--- a/TheGameMauiNET6/Views/BattleDetailsPage.xaml
+++ b/TheGameMauiNET6/Views/BattleDetailsPage.xaml
@@ -19,106 +19,50 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <BoxView
-                    Color="Green"
-                    Grid.RowSpan="4"/>
-        <Image 
-                    Source="{Binding ImageSource}"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Grid.Row="2"
-                    Grid.RowSpan="3"/>
 
-        <Image
-            Source="{Binding HeroImageSource}"
-            Grid.Row="2"
+        <Image 
+            Source="{Binding ImageSource}"
+            HorizontalOptions="Center"
+            VerticalOptions="Center"
+            Grid.Row="1"
             Grid.RowSpan="3"
-            Grid.Column="1" />
+            Grid.Column="1"/>
 
         <Label
-            Text="{Binding HeroImageSource}"/>
+            x:Name="HealthLabel"
+            Text="{Binding HealthPoints, StringFormat='Health: {0}'}"
+            Grid.Column="1"
+            Grid.Row="4"
+            HorizontalOptions="Center"
+            />
+        
+
+        <Image
+            x:Name="HeroImage"
+            HorizontalOptions="Center"
+            VerticalOptions="Center"
+            Grid.Row="1"
+            Grid.RowSpan="3"
+            Grid.Column="0"/>
+
+        <Button
+            Command="{Binding PhysicalAttackCommand}"            
+            Text="Physical attack"
+            Grid.Row="5"
+            />
 
         <!--<Button
-                                    Grid.Column="2"
-                                    Text="Radera"
-                                    Command="{Binding Source={RelativeSource 
+        Command="{Binding Source={RelativeSource 
                                     AncestorType={x:Type viewmodel:ShopPageViewModel}}, 
                                     Path=DeleteProductCommand}" CommandParameter="{Binding .}"/>-->
+        <!--<Button
+            x:Name="HeroPhysicalAttack"
+            BindingContext="{x:Reference HeroPhysicalAttack}"
+            Text="Physical attack"
+            Grid.Row="5"
+            Grid.Column="0"
+            Clicked="OnPhysicalAttackClicked"/>-->
 
-
-
-        <!--<BoxView 
-                    Grid.Column="1"
-                    Color="Blue" />
-        <Label 
-                    Grid.Column="1"
-                    Text="{Binding GoKnight.Level, StringFormat='Level: {0}'}"                   
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center" />
-        <BoxView 
-                    Grid.Column="1"
-                    Color="Pink"
-                    Grid.Row="1"/>
-        <Label 
-                    Grid.Column="1"
-                    Text="{Binding GoKnight.HealthPoints, StringFormat='Health: {0}'}"                   
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Grid.Row="1"/>
-        <BoxView 
-                    Grid.Column="1"
-                    Color="Yellow"
-                    Grid.Row="2"/>
-        <Label 
-                    Grid.Column="1"
-                    Text="{Binding GoKnight.PhysicalAttack, StringFormat='Physical Attack: {0}'}"
-                    TextColor="Black"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Grid.Row="2"/>
-        <BoxView 
-                    Grid.Column="1"
-                    Color="Orange"
-                    Grid.Row="3"/>
-        <Label 
-                    Grid.Column="1"
-                    Text="{Binding GoKnight.MagicalAttack, StringFormat='Magical Attack: {0}'}"
-                    TextColor="Black"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Grid.Row="3"/>
-        <BoxView 
-                    Grid.Row="4"
-                    Color="Teal" />
-        <Entry
-                    x:Name="NameInput"
-                    Placeholder="Enter your name here"
-                    PlaceholderColor="White"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Grid.Row="4"
-                    TextColor="White"/>
-        <BoxView 
-                    Grid.Row="4"
-                    Grid.Column="1"
-                    Color="Purple" />
-        <Button 
-                    Grid.Row="4"
-                    Grid.Column="1"
-                    Text="To Battle!"
-                    Clicked="OnToBattleClicked"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center" />
-        <BoxView 
-                    Grid.Row="5"
-                    Grid.ColumnSpan="2"
-                    Color="Red" />
-        <Label 
-                    Grid.Row="5"
-                    Grid.ColumnSpan="2"
-                    Text="Row 2, Columns 0 and 1"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center" />-->
     </Grid>
 
 </ContentPage>
